--- a/allauth/templates/account/login.html
+++ b/allauth/templates/account/login.html
@@ -16,7 +16,7 @@
             </a>
         {% endsetvar %}
         {% element p %}
-            {% blocktranslate %}If you have not created an account yet, then please {{ link }}sign up{{ end_link }} first.{% endblocktranslate %}
+            {{ form.form_description }}
         {% endelement %}
         {% url 'account_login' as login_url %}
         {% element form form=form method="post" action=login_url tags="entrance,login" %}
